# babel-validation

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-website-to-gh-pages.yaml  scala.yml  tests.yaml
_astro/: Autocomplete.meYhxmCq.js  Autocomplete.vxxAqoME.js  PrefixComparator.dxTUcj2F.js  client.0TdvLgSD.js  client.acUhmWjp.js  runtime-dom.esm-bundler.YIp1t10W.js  runtime-dom.esm-bundler.csOh2WLt.js
assets/: AboutView.1ab63fb4.js  AboutView.305fcc43.js  AboutView.37e41ea7.js  AboutView.44ab7c34.js  AboutView.764c3cd4.js  AboutView.99c71995.js  AboutView.a56d3bc8.js  AboutView.b83a8afc.js  AboutView.e6aa5f1a.js  AboutView.e6eb6423.js  AboutView.f2ca1641.js  HomeView.4cede3b7.js  NameResValidator.c7485571.js  NodeNormValidator.57c6a843.js  index.14699e5e.js  index.1e54b24c.css  index.24b16168.js  index.42a7b1b4.js  index.4d7746e2.js  index.5733a830.js  index.62385a05.css  index.6caccdfc.js  index.7814acdd.js  index.85a1896e.css  index.94d40a00.js  index.a15592bf.js  index.c1c86f2e.js  index.c609b501.js
autocomplete/: index.html
log-analysis/: NodeNorm_log_analysis.ipynb
log-analysis/logs/: README.md
prefix-comparator/: index.html
prefix_reports/: prefix_report-2024oct24.json  prefix_report.json
scripts/: summary2csv.pl
souffle/: find-duplicate-pref-label.dl  generate-combined.sh
src/babel_validation/: __init__.py  runner.py
src/babel_validation/assertions/: README.md  __init__.py  common.py  gen_docs.py  nameres.py  nodenorm.py
src/babel_validation/core/: testrow.py
src/babel_validation/services/: nameres.py  nodenorm.py
src/babel_validation/sources/: github_issues_test_cases.py
src/babel_validation/tools/: csv_to_babeltests.py
tests/: _pytest_helpers.py  conftest.py  pytest.ini  targets.ini  test_assertions_docs.py  test_env.py
tests/common/: blocklist.py  github_issues_test_cases.py  google_sheet_test_cases.py  testrow.py
tests/data/: Babel_NodeNorm_NameRes_validation-Tests-2024feb19.csv  csv_to_babeltests_fixture.csv
tests/github_issues/: conftest.py  test_github_issues.py  test_runner.py  test_system.py
tests/nameres/: test_api.py  test_blocklist.py  test_nameres_api.py  test_nameres_from_gsheet.py  test_nameres_non_deterministic_results.py  test_nameres_taxon_specific.py  test_non_deterministic_results.py
tests/nodenorm/: test_api.py  test_nodenorm_api.py  test_nodenorm_descriptions.py  test_nodenorm_from_gsheet.py  test_nodenorm_non_deterministic_results.py  test_nodenorm_setid.py  test_nodenorm_types.py  test_non_deterministic_results.py
tests/nodenorm/by_issue/: test_nodenorm_229.py
tests/test_environment/: test_assertions_docs.py  test_env.py
tests/tools/: test_csv_to_babeltests.py
website/: .eslintrc.cjs  astro.config.mjs  index.html  package-lock.json  package.json  vite.config.js
website-vue3-vite/: package-lock.json  vite.config.js
website-vue3-vite/src/: main.js
website-vue3-vite/src/assets/: main.css
website-vue3-vite/src/components/: TextWithURLs.vue
website-vue3-vite/src/models/: NameResTest.js  Test.js  TestResult.js
website/public/prefix_reports/: prefix_report-2024oct1-maybe.json  prefix_report-dev-2024jan23.json  prefix_report.json
website/src/: App.vue
website/src/components/: Autocomplete.vue  PrefixComparator.vue  TestResult.vue  TextWithURLs.vue
website/src/layouts/: Layout.astro
website/src/models/: NameResTest.js  NodeNormTest.js  NodeNormTesting.js  helpers.js  tests.js
website/src/pages/: index.astro
website/src/router/: index.js
website/src/views/: Autocomplete.vue  AutocompleteBulkValidator.vue  AutocompleteValidator.vue  HomeView.vue  (+2 more)
(+35 files in other folders)
