[project]
name = "babel-validation"
version = "0.1.0"
description = "A set of programs for validating the output of the Babel pipelines."
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "requests>=2.32.5",
    "filelock",
    "deepdiff>=8.6.1",
    "openapi-spec-validator>=0.7.2",
    "pytest>=8.4.2",
    "pytest-timeout>=2.4.0",
]

[project.urls]
Repository = "https://github.com/TranslatorSRI/babel-validation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/babel_validation"]

[tool.pytest.ini_options]
# Without testpaths, a bare `pytest` would also scan the website directories
# (including node_modules) during collection.
testpaths = ["tests"]
timeout = 300
